fixed css for custom select -> z-index of dropdown list is below dropdownd header

--- a/src/components/movieFilter/MovieFilter.css
+++ b/src/components/movieFilter/MovieFilter.css
@@ -1,16 +1,28 @@
 .movie-filter {
   padding: 0 10px;
   background-color: rgba(14, 39, 64, 0.45);
-  height: 100px;
   border-radius: 5px;
   position: relative;
   z-index: 3;
-  width: 100%;
+  width: 90%;
   margin: auto;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .movie-filter--item {
   width: 20%;
+}
+
+@media screen and (max-width: 1016px) {
+  .movie-filter--item {
+    width: 33%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .movie-filter--item {
+    width: 49%;
+  }
 }
