--- a/src/shared/components/FormElement/Select.css
+++ b/src/shared/components/FormElement/Select.css
@@ -36,6 +36,8 @@
 
 .dropdown-list {
   width: 94%;
+  position: relative;
+  z-index: 2;
   font-size: 1rem;
   font-weight: 500;
   background-color: #ffffff;
