--- a/src/shared/components/Header/Header.css
+++ b/src/shared/components/Header/Header.css
@@ -78,5 +78,6 @@ a.navlinks__item {
   }
   .login {
     width: 30%;
+    text-align: right;
   }
 }
